fix visible

--- a/src/sass/layout/_modal.scss
+++ b/src/sass/layout/_modal.scss
@@ -480,7 +480,7 @@
   display: block;
 }
 .aside {
-  display: none;
+  display: block;
 
   &__align {
     display: flex;
